<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.rm.MainActivity"
    tools:ignore="MergeRootFrame" >

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/weightHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weightHeader"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/repHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/repHeader"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/reps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/rmHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rmHeader"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/rm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/calculate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calculate" 
            android:onClick="calculate"/>

        <TextView
            android:id="@+id/instructions1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instructions1"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/instructions2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instructions2"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/instructions3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instructions3"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/instructions4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instructions4"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>

</FrameLayout>

